fix dark mode pop in and css spacing

--- a/src/components/BlogToC.module.css
+++ b/src/components/BlogToC.module.css
@@ -26,7 +26,7 @@
   color: light-dark(var(--color-gray-500), var(--color-gray-300));
 }
 .blogContainer {
-  line-height: 120%;
+  line-height: 140%;
 }
 .blogReadingTime {
   font-style: italic;
